# proyecto_antivirus

./: FD01-Informe-Factibilidad.md  FD02-Informe-Gestion.md  FD02-Informe-Vision.md  FD03-Informe-Requerimientos.md  FD04-Informe-Arquitectura.md  ISSUES.md  README.md  RELEASE-v1.0.md
codigo-fuente/: .gitignore
codigo-fuente/Instalador/: setup.iss
codigo-fuente/Instalador/BitCraft_Antivirus/_internal/: utils.py
codigo-fuente/Instalador/BitCraft_Antivirus/_internal/assets/signatures/: malware_hashes.txt  yara_rules.yar
codigo-fuente/Instalador/BitCraft_Antivirus/_internal/views/: cleaning_view.py  protection_view.py  update_view.py
codigo-fuente/backend_rust/: Cargo.toml
codigo-fuente/backend_rust/src/: cleaner.rs  daemon.rs  main.rs  network.rs  protection.rs  quarantine.rs  scanner.rs  updater.rs  utils.rs
codigo-fuente/frontend_python/: BitCraft_Antivirus.spec  engine_bridge.py  main.py  requirements.txt
codigo-fuente/frontend_python/views/: dashboard_view.py  firewall_view.py  quarantine_view.py  settings_view.py
wiki/: Arquitectura.md  Caracteristicas.md  Home.md  Instalacion.md  Roadmap.md
