[package]
name = "secureguard_engine"
version = "0.3.0"
edition = "2021"
description = "SecureGuard Security Engine - Motor de protección en Rust"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
notify = "6.1"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true